feat: add list functionality
